CHANGELOG
---------

Version 0.9.9.2 - 131017
- add new plugin pluginmanager to manage plugins (enumanc)
- add new daemon dlrssmsd and recvsmsd to increase performance

Version 0.9.9.1 - 130902
- add new webservices type of action IX to get SMS on user's inbox
- add logger_print() at the begining and the end of webservices
- add DBHOST and DBPORT on install script
- add common place to put common js files, themes/common/jscss
- add sendsms_host option in kannel gateway module (lucastx)
- add option to load/parse .html and .md files on page_welcome
- add hints with tooltip
- add new option CSS URL to decorate sms_board
- add new gateway Twilio twilio.com
- add new language de_DE Deutsch (andre)
- add lib/version.php contains version number
- add automatically set Unicode if non-latin chars typed and vice versa (dvoryanchikov)
- update kannel gateway related to account and dcs (dvoryanchikov)
- update log level to 3 for clickatell getsmsstatus
- update lang, more new translations on pt_BR (gschanuel)
- upgrade themes default, re-design
- upgrade all plugins to match new themes stuffs
- upgrade action icons, use common icons for all themes but can be overriden
- remove unused js and css files on themes default
- remove dTree js and css files
- remove themes 'work2'
- remove themes 'km2'
- remove column 'status' on inbox, incoming and outgoing tables
- fix #90 webservices list all incoming SMS on ta=in regardless of uid
- fix #89 forward sms_subscribe should check sms_sender (ibsoman)
- fix #88 addslashes on sms_subscribe message (ibsoman)
- fix #87 correcting mistake and addslashes before sms_autoreply reply (ibsoman)
- fix search categories in user_mgmnt
- fix plugin loader, wrongly use counter variable

Version 0.9.9 - 130625
- update sendsmsd daemon to enable parallel multi queue processing
- update config.php to include options for sendsmsd queue number and queue length limit
- update http method to POST in SMS custom (endymuhardin)