@@ -32,32 +32,32 @@ if ( preg_match_all('/status=\"([A-Z]+)\"/', $xml, $result) ) {
 $db_query = "SELECT smslog_id FROM "._DB_PREF_."_gatewayInfobip_apidata WHERE apimsgid='$apimsgid'";
 $db_result = dba_query($db_query);
 $db_row = dba_fetch_array($db_result);
-$slid = $db_row['smslog_id'];
+$smslog_id = $db_row['smslog_id'];
 
-$db_query = "SELECT uid FROM "._DB_PREF_."_tblSMSOutgoing WHERE smslog_id='$slid'";
+$db_query = "SELECT uid FROM "._DB_PREF_."_tblSMSOutgoing WHERE smslog_id='$smslog_id'";
 $db_result = dba_query($db_query);
 $db_row = dba_fetch_array($db_result);
 $uid = $db_row['uid'];
 
-logger_print("addr:".$remote_addr." host:".$remote_host." type:".$status." slid:".$slid." uid:".$uid, 2, "infobip dlr");
+logger_print("addr:".$remote_addr." host:".$remote_host." type:".$status." smslog_id:".$smslog_id." uid:".$uid, 2, "infobip dlr");
 
-if ($status && $slid && $uid) {
+if ($status && $smslog_id && $uid) {
 	switch ($status) {
        		case "DELIVERED":               $p_status = 3; break; // delivered
        		case "NOT_DELIVERED":           $p_status = 2; break; // failed
        		case "NOT_ENOUGH_CREDITS":      $p_status = 2; break; // failed
     	}
 
-	setsmsdeliverystatus($slid,$uid,$p_status);
+	setsmsdeliverystatus($smslog_id,$uid,$p_status);
 
 	// log dlr
-	//$db_query = "SELECT apimsgid FROM "._DB_PREF_."_gatewayInfobip_apidata WHERE smslog_id='$slid'";
+	//$db_query = "SELECT apimsgid FROM "._DB_PREF_."_gatewayInfobip_apidata WHERE smslog_id='$smslog_id'";
 	//$db_result = dba_num_rows($db_query);
 	//if ($db_result > 0) {
-		$db_query = "UPDATE "._DB_PREF_."_gatewayInfobip_apidata SET c_timestamp='".mktime()."', status='$status' WHERE smslog_id='$slid'";
+		$db_query = "UPDATE "._DB_PREF_."_gatewayInfobip_apidata SET c_timestamp='".mktime()."', status='$status' WHERE smslog_id='$smslog_id'";
 		$db_result = dba_query($db_query);
 	//} else {
-	//	$db_query = "INSERT INTO "._DB_PREF_."_gatewayKannel_dlr (smslog_id,kannel_dlr_type) VALUES ('$slid','$type')";
+	//	$db_query = "INSERT INTO "._DB_PREF_."_gatewayKannel_dlr (smslog_id,kannel_dlr_type) VALUES ('$smslog_id','$type')";
 	//	$db_result = dba_query($db_query);
 	//}
 }
