@@ -44,7 +44,7 @@ function nexmo_hook_sendsms($sms_sender,$sms_footer,$sms_to,$sms_msg,$uid='',$gp
 			$c_error_text = $resp['messages'][0]['error-text'];
 			logger_print("sent smslog_id:".$smslog_id." message_id:".$c_message_id." status:".$c_status." error:".$c_error_text, 2, "nexmo outgoing");
 			$db_query = "
-				INSERT INTO "._DB_PREF_."_gatewayNexmo (local_slid,remote_slid,status,network,error_text)
+				INSERT INTO "._DB_PREF_."_gatewayNexmo (local_smslog_id,remote_smslog_id,status,network,error_text)
 				VALUES ('$smslog_id','$c_message_id','$c_status','$c_network','$c_error_text')";
 			$id = @dba_insert_id($db_query);
 			if ($id && ($c_status == 0)) {
